--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -285,6 +285,29 @@ background-color: var(--secondary-color);
     
 }
 
+/** 
+
+===  ABOUT US SECTION
+
+**/
+
+.breadcrumb-pages{
+  padding: 140px 0 80px 0;
+  background: linear-gradient(to bottom, rgba(102, 163, 255, 0.6), rgba(08, 08, 08, .3) 30% ,  rgba(29, 16, 80, 1)),
+                url("/static/images/bg_investment.jpg");   
+  background-position: center;
+  background-size: cover;
+  color: white !important;
+}
+
+.breadcrumb-pages h1{
+  color: #fff;
+  font-size: 3rem;
+  text-shadow: -2px 0 4px rgb(0,0,0,0.7);
+}
+
+
+
 
 /* === Footer === */
 #footer {
