--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -124,7 +124,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="footer-info">
-                <b class="fs-6 fw-bolder;">Wealth Wheel Investment Capital</b>
+                <b class="fs-6 fw-bolder;">RiazVest Investment Capital</b>
                 <p>
                   A108 Adam Street <br />
                   NY 535022, USA<br /><br />
@@ -197,7 +197,7 @@
       <div class="container">
         <div class="copyright">
           &copy; Copyright
-          <strong><span>Wealth Wheel Capital Investment.</span></strong
+          <strong><span>RiazVest  Capital Investment.</span></strong
           ><br />
           All Rights Reserved
         </div>
