--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -14,4 +14,13 @@
         </section>
     </div>
 </section>
+
+<nav class="breadcrumbLink border-4 border-bottom">
+    <div class="container">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="/">Home</a></li>
+        <li class="breadcrumb-item">About</li>
+      </ol>
+    </div>
+  </nav>
 {% endblock content %}
