about achievements section

--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -22,5 +22,71 @@
         <li class="breadcrumb-item">About</li>
       </ol>
     </div>
-  </nav>
+</nav>
+
+<section class="abt-achievement">
+    <div class="container">
+        <section class="row g-4">
+            <article class="col-6 col-md-4 col-lg-3 offset-lg-2">
+                <div class="border achievement">
+                    <i class="bi bi-briefcase-fill"></i>
+                    <div>
+                        <h3>$400M +</h3>
+                        <p>Assets Managed</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-6 col-md-4 col-lg-3">
+                <div class="border achievement">
+                    <i class="bi bi-people"></i>
+                    <div>
+                        <h3>17,000 +</h3>
+                        <p>Satisfied Investors</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-6 col-md-4 col-lg-3">
+                <div class="border achievement">
+                    <i class="bi bi-calendar-heart-fill"></i>
+                    <div>
+                        <h3>7Yrs +</h3>
+                        <p>Industry of Excellence</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-6 col-md-4 col-lg-3 offset-lg-1">
+                <div class="border achievement">
+                    <i class="bi bi-person-fill-check"></i>
+                    <div>
+                        <h3>95 % +</h3>
+                        <p>Client Retention Rate</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-6 col-md-4 col-lg-3">
+                <div class="border achievement">
+                    <i class="bi bi-currency-exchange"></i>
+                    <div>
+                        <h3>$ 80M +</h3>
+                        <p>Profit paid to Investors</p>
+                    </div>
+                </div>
+            </article>
+
+            <article class="col-6 col-md-4 col-lg-3">
+                <div class="border achievement">
+                    <i class="bi bi-transparency"></i>
+                    <div>
+                        <h3>100 %</h3>
+                        <p>Transparent Operations</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </div>
+</section>
 {% endblock content %}
