--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -291,7 +291,7 @@ background-color: var(--secondary-color);
 
 **/
 
-.breadcrumb-pages{
+#about .breadcrumb-pages{
   padding: 140px 0 80px 0;
   background: linear-gradient(to bottom, rgba(102, 163, 255, 0.6), rgba(08, 08, 08, .3) 30% ,  rgba(29, 16, 80, 1)),
                 url("/static/images/bg_investment.jpg");   
@@ -300,39 +300,51 @@ background-color: var(--secondary-color);
   color: white !important;
 }
 
-.breadcrumb-pages h1{
+#about .breadcrumb-pages h1{
   color: #fff;
   font-size: 3rem;
   text-shadow: -2px 0 4px rgb(0,0,0,0.7);
 }
 
-.breadcrumbLink{
+#about .breadcrumbLink{
   /* background: #ebe9ff; */
   background: #66cc6654;
   padding: 15px 0;
 }
 
-.breadcrumbLink .breadcrumb-item{
+#about .breadcrumbLink .breadcrumb-item{
   font-weight: 500;
   font-size: 16px;
 }
-.breadcrumbLink .breadcrumb-item a{
+
+#about .breadcrumbLink .breadcrumb-item a{
   color: var(--primary-color-one);
   font-weight: 700;
 }
 
-.abt-achievement{
+#about .abt-achievement{
   padding: var(--section-padding);
 }
-.abt-achievement .achievement{
+
+#about .abt-achievement .achievement{
   padding: 15px;
   background-color: rgb(248, 247, 247);
 }
 
-.abt-achievement .achievement .bi{
+#about .abt-achievement .achievement .bi{
   font-size: 24px;
   color: var(--secondary-color);
   font-weight: 700;
+}
+
+#about .introduction{
+  padding: 4rem 0;
+}
+
+#about .introduction img{
+  height: 400px;
+  width: 100%;
+  object-fit: cover;
 }
 
 
