comments the about page

--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -2,6 +2,7 @@
 {% load static %} 
 
 {% block content %}
+<!--=== THE ABOUT PAGE ===-->
 <section id="about">
 <section class="breadcrumb-pages">
     <div class="container">
@@ -16,6 +17,7 @@
     </div>
 </section>
 
+<!--=== BREADCRUMB SECTION ===-->
 <nav class="breadcrumbLink border-4 border-bottom">
     <div class="container">
       <ol class="breadcrumb">
@@ -24,7 +26,10 @@
       </ol>
     </div>
 </nav>
+<!--=== END OF THE BREADCRUMB SECTION ===-->
 
+
+<!--=== ACHIEVEMENT SECTION ===-->
 <section class="abt-achievement">
     <div class="container">
         <section class="row g-4">
@@ -90,7 +95,9 @@
         </section>
     </div>
 </section>
+<!--=== END OF THE ACHIEVEMENT SECTION ===-->
 
+<!--=== INTRODUCTION SECTION ===-->
 <section class="introduction bg-light">
     <div class="container">
         <section class="row">
@@ -129,7 +136,9 @@
         </section>
     </div>
 </section>
+<!--=== END OF THE INTRODUCTION SECTION ===-->
 
+<!-- FINAL STATEMENT SECTION -->
 <section style="padding: 4rem 0;">
     <div class="container">
         <section class="row">
@@ -150,4 +159,5 @@
     </div>
 </section>
 </section>
+<!--=== END OF THE ABOUT PAGE ===-->
 {% endblock content %}
