--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -18,7 +18,7 @@
 </section>
 
 <!--=== BREADCRUMB SECTION ===-->
-<nav class="breadcrumbLink border-4 border-bottom">
+<nav class="breadcrumbLink">
     <div class="container">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
