--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -293,7 +293,8 @@ background-color: var(--secondary-color);
 
 #about .breadcrumb-pages{
   padding: 140px 0 80px 0;
-  background: linear-gradient(to bottom, rgba(102, 163, 255, 0.6), rgba(08, 08, 08, .3) 30% ,  rgba(29, 16, 80, 1)),
+  background: linear-gradient(to bottom, rgba(102, 163, 255, 0.6), 
+              rgba(08, 08, 08, .3) 30% ,  rgba(29, 16, 80, 1)),
                 url("/static/images/bg_investment.jpg");   
   background-position: center;
   background-size: cover;
