--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -12,7 +12,7 @@
 
 html, body{
   font-size-adjust: none;
-  font-size: 100%;
+  font-size: 14px;
   font-family: "Lato", sans-serif;
   line-height: 1.7;
   word-spacing: 2px;
