--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -312,6 +312,11 @@ background-color: var(--secondary-color);
   font-size: 16px;
 }
 
+.breadcrumbLink .breadcrumb-item a{
+  color: var(--primary-color-one);
+  font-weight: 700;
+}
+
 /** 
 
 ===  ABOUT US SECTION
@@ -321,13 +326,6 @@ background-color: var(--secondary-color);
   /* background: #ebe9ff; */
   background: #66cc6654;
   padding: 15px 0;
-}
-
-
-
-#about .breadcrumbLink .breadcrumb-item a{
-  color: var(--primary-color-one);
-  font-weight: 700;
 }
 
 #about .abt-achievement{
@@ -368,6 +366,17 @@ background-color: var(--secondary-color);
 
 #faq{
   padding: var(--section-padding);
+}
+
+/** 
+
+===  CONTACT US SECTION
+
+**/
+#contact .breadcrumbLink{
+  /* background: #ebe9ff; */
+  background: #c8a0a0bc;
+  padding: 15px 0;
 }
 
 
