icons for contact page

--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -29,6 +29,69 @@
     </div>
 </nav>
 <!--=== END OF THE BREADCRUMB SECTION ===-->
+
+<section class="p-5">
+    <div class="container">
+        <section class="row">
+            <article class="col-12 col-md-7">
+                <!--  *******   Title/heading   *******  -->
+                <div class="contactTitle">
+                    <h2>Get In Touch</h2>
+                    <p>
+                    Your input is essential to us as we strive to continuously 
+                    improve our services and tailor our solutions to meet your requirements. 
+                    We look forward to hearing from you soon!
+                    </p>
+                </div>
+
+                <!--  *******   Contact Info   *******  -->
+                <div class="contactInfo">
+                    <div class="iconGroup">
+                        <div class="icon">
+                            <i class="bi bi-telephone-inbound-fill"></i>
+                        </div>
+                        <div class="details">
+                            <span>Phone</span>
+                            <span>+1 573 760 6982</span>
+                        </div>
+                    </div>
+
+                    <div class="iconGroup">
+                        <div class="icon">
+                            <i class="bi bi-envelope-at-fill"></i>
+                        </div>
+                        <div class="details">
+                            <span>Email</span>
+                            <span>support@riazvest.com</span>
+                        </div>
+                    </div>
+
+                    <div class="iconGroup">
+                    <div class="icon">
+                        <i class="bi bi-geo-alt-fill"></i>
+                    </div>
+                    <div class="details">
+                        <span>Location</span>
+                        <span>A108 Adam Street, NY 535022, USA</span>
+                    </div>
+                    </div>
+                </div>
+
+                <!--  *******   Social Media   *******  -->
+                <div class="socialMedia">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div>
+            </article>
+            
+            <article class="col-12 col-md-7 right">
+                
+            </article>
+        </section>
+    </div>
+</section>
 </section>
 <!--=== END OF CONTACT PAGE ===-->
 
