--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -33,7 +33,7 @@
 <section class="p-5">
     <div class="container">
         <section class="row">
-            <article class="col-12 col-md-7">
+            <article class="col-12 col-md-5">
                 <!--  *******   Title/heading   *******  -->
                 <div class="contactTitle">
                     <h2>Get In Touch</h2>
@@ -79,10 +79,10 @@
 
                 <!--  *******   Social Media   *******  -->
                 <div class="socialMedia">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="bi bi-telegram"></i></a>
+                    <a href="#"><i class="bi bi-whatsapp"></i></a>
+                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="#"><i class="bi bi-skype"></i></a>
                 </div>
             </article>
             
