adjustments on write ups

--- a/pages/templates/pages/contact.html
+++ b/pages/templates/pages/contact.html
@@ -9,7 +9,7 @@
     <div class="container py-5">
         <section class="row g-5">
             <article class="col-12 col-lg-8 offset-lg-2 mx-auto text-center">
-                <h1>Get in Touch with Us</h1>
+                <h1>Contact Us</h1>
                 <p class="text-white">
                     We’re here to assist you with any questions, concerns, or feedback you may have. 
                     Whether you need more information about our investment plans or require support, our team is ready to help. 
@@ -37,7 +37,7 @@
             <article class="col-12 col-md-5">
                 <!--  *******   Title/heading   *******  -->
                 <div class="contactTitle">
-                    <h2>Get In Touch</h2>
+                    <h2>Get In Touch With Us</h2>
                     <p>
                     Your input is essential to us as we strive to continuously 
                     improve our services and tailor our solutions to meet your requirements. 
