--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -1,94 +1,78 @@
-<!DOCTYPE html> {% load static %}
+<!DOCTYPE html>
+{% load static %}
+{% load i18n %}
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if title %} {{title}} {% else %} banking {% endif %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'investments/css/b52css/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'investments/css/core.css' %}" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="{% static 'investments/images/favicon.png' %}">
+    <title>{% if title %} {{title}} {% else %} RiazVest {% endif %}</title>
+
+    <link rel="stylesheet" href="{% static 'css/b5css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/core.css' %}">
+
+    <!-- Icons CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Link Swiper's CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
 
     <style>
-        .form-floating > label{
-            left: 10px;
-        }
+      .aside{
+        width: 450px;
+        height: 100% !important;
+        position: fixed; 
+        background: #000;
+        z-index: 100;
+        overflow-x: hidden;
+      }
 
-        .form-label, .form-check-label {
-            color: white;
-        }
+      .content-wrapper{
+        width: 100%;
+        min-height: 100vh;
+        padding-left: 450px;
+        /* position: absolute; */
+        background: #f8f9fa;
 
-        .form-text {
-            color: #dc3545;
-            display: flex;
-        }
-        
-        .form-text ul {
-            padding-left: 1rem;
-            min-width: 40vw;
-            padding-top: 10px;
-        }
-
-        .form-text :hover {
-            color: #dc3545;
-        }
+    }
     </style>
-</head>
-
-<body>
-    <!-- <section class="container-fluid g-0 bg">
-        <div class="row">
-            <div class="offset-sm-3 col-sm-6">
-                {% for message in messages %}
-                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-                    <b>{{ message }}</b>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                {% endfor %}
-            </div>
-        </div>
-    </section> -->
-
     
-    {% block sidebar %} {% endblock sidebar %} {% block content %} {% endblock content %}
+</head>
+<body>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="{% static 'dbank/js/b52js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'dbank/js/b52js/bootstrap.bundle.min.js' %}"></script>
+  <section class="aside d-flex flex-column align-items-start d-none d-md-block">
 
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        /**** javascript code for aos file ****/
-        AOS.init({
-            delay: 0,
-            duration: 800,
-            easing: 'ease-in-sine',
-        });
-    </script>
+  </section>
 
-    <!-- referral scripts -->
-    <script>
-        const upliner = document.getElementById("id_upliner")
-        const params = new Proxy(new URLSearchParams(window.location.search), {
-            get: (searchParams, prop) => searchParams.get(prop),
-        });
-        let value = params.ref;
-        console.log(upliner)
-        if(value){
-            sessionStorage.setItem('wealthwheel_ref', value);
-            upliner.value = value;
-        }
-        else{
-            upliner.value = 'No upliner';
-        }
+  <section class="content-wrapper">
+    {% block content %}
+
+    {% endblock content %}
+
+    <footer>
+      <div class="pt-lg-5 text-center" style="color: hsl(217, 10%, 50.8%)">&copy; {% trans "Copyright" %}
+        <strong><span>Wealth Wheel Capital Investment.</span></strong><br />
+        {% trans "All Rights Reserved" %}
+      </div>
+    </footer>
+  </section>
         
-    </script>
-
+<!-- Bootstrap js -->
+<script src="{% static 'js/b5js/bootstrap.bundle.min.js' %}"></script>
+ <!-- Swiper JS -->
+ <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+ <!-- Main customized js -->
+ <script src="{% static 'js/main.js' %}"></script>
+ <!-- Box icon js -->
+ <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
-
 </html>
