adjust the base footer

--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -31,7 +31,7 @@
         width: 450px;
         height: 100% !important;
         position: fixed; 
-        background: #000;
+        background: #003366;
         z-index: 100;
         overflow-x: hidden;
       }
@@ -40,9 +40,7 @@
         width: 100%;
         min-height: 100vh;
         padding-left: 450px;
-        /* position: absolute; */
         background: #f8f9fa;
-
     }
     </style>
     
@@ -53,12 +51,12 @@
 
   </section>
 
-  <section class="content-wrapper">
+  <section class="content-wrapper">>
     {% block content %}
 
     {% endblock content %}
 
-    <footer>
+    <footer class="pt-3 pt-md-4">
       <div class="pt-lg-5 text-center" style="color: hsl(217, 10%, 50.8%)">&copy; {% trans "Copyright" %}
         <strong><span>Wealth Wheel Capital Investment.</span></strong><br />
         {% trans "All Rights Reserved" %}
