--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -11,6 +11,9 @@
 
 
 html, body{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   font-size-adjust: none;
   font-size: 14px;
   font-family: "Lato", sans-serif;
