--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -51,7 +51,7 @@
 
   </section>
 
-  <section class="content-wrapper">>
+  <section class="content-wrapper">
     {% block content %}
 
     {% endblock content %}
