--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -7,13 +7,13 @@
 {% block content %}
   <!-- Section: Log In -->
       <section class="container">
-        <div class="row gx-lg-5">
-          <article class="col-lg-8 mx-auto mb-5">
+        <div class="row gx-5 py-5">
+          <article class="col-lg-8 mx-auto">
             <div class="border-0 rounded-2">
                 <form class="login" method="POST" action="{% url 'account_login' %}">
-                  <div class="d-lg-none">
-                    <h1 class="h2 fw-bold text-center text-white">{% trans "Login Into Account" %}</h1>
-                    <p class="text-center text-muted">{% trans "Kindly enter your username and password." %}</p>
+                  <div>
+                    <h1 class="h2 fw-bold text-center">{% trans "Welcome Back" %}</h1>
+                    <p class="text-center text-muted">{% trans "Login again to start building your dollars portfolio." %}</p>
                   </div>
                   <br />
                   <div class="row">
@@ -24,7 +24,7 @@
                     {% endif %}
                     <a class="button secondaryAction" href="{% url 'account_reset_password' %}"></a>
                     <div class="pb-4">
-                      <button class="btn btn-danger fw-bolder btn-lg col-12 primaryAction" type="submit">{% trans "Log In" %}</button>
+                      <button class="btn btn-1 fw-bolder btn-lg col-12 primaryAction" type="submit">{% trans "Sign In" %}</button>
                     </div>
                     <div class="text-white d-flex justify-content-center">
                       <span class="pe-2">{% trans "Don't have an Account" %}</span>
