use sumit button directly from sign up

--- a/accounts/templates/account/signup.html
+++ b/accounts/templates/account/signup.html
@@ -28,9 +28,9 @@
           {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <!-- <button class="btn btn-primary btn-lg col-12 col-md-5 shadow" type="submit" value="create account">
+          <button class="btn btn-1 btn-lg col-12 col-md-12 shadow" type="submit" value="create account">
             {% trans "CREATE ACCOUNT" %}
-            </button> -->
+            </button>
         </form>
 
     </article>
