--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -56,7 +56,7 @@
 
     {% endblock content %}
 
-    <footer class="pt-3 pt-md-4">
+    <footer>
       <div class="pt-lg-5 text-center" style="color: hsl(217, 10%, 50.8%)">&copy; {% trans "Copyright" %}
         <strong><span>Wealth Wheel Capital Investment.</span></strong><br />
         {% trans "All Rights Reserved" %}
