add logo and some write up to the aside bar

--- a/accounts/templates/account/base.html
+++ b/accounts/templates/account/base.html
@@ -47,8 +47,14 @@
 </head>
 <body>
 
-  <section class="aside d-flex flex-column align-items-start d-none d-md-block">
-
+  <section class="aside d-flex flex-column align-items-start d-none d-md-block border-end">
+    <img src="{% static '/images/logo.PNG' %}" alt="" class="img-fluid">
+    <div class="text-center pt-4">
+      <h3 class="text-white display-5 fw-bolder">RiazVest</h3>
+      <p class="text-light h5 ">
+        Grow Your Wealth, Secure Your Future
+      </p>
+    </div>
   </section>
 
   <section class="content-wrapper">
@@ -58,7 +64,7 @@
 
     <footer>
       <div class="pt-lg-5 text-center" style="color: hsl(217, 10%, 50.8%)">&copy; {% trans "Copyright" %}
-        <strong><span>Wealth Wheel Capital Investment.</span></strong><br />
+        <strong><span>RiazVest Capital Investment.</span></strong><br />
         {% trans "All Rights Reserved" %}
       </div>
     </footer>
