write up changed

--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -9,7 +9,7 @@
       <section class="container">
         <div class="row">
           <article class="col-lg-8 mx-auto">
-                <form class="login p-2 p-md-5 bg-dark" method="POST" action="{% url 'account_login' %}">
+                <form class="login p-2 p-md-5" method="POST" action="{% url 'account_login' %}">
                   <div>
                     <h1 class="h2 fw-bold text-center">{% trans "Welcome Back" %}</h1>
                     <p class="text-center text-muted">{% trans "Login again to start building your dollars portfolio." %}</p>
