make writeup bolder

--- a/accounts/templates/account/signup.html
+++ b/accounts/templates/account/signup.html
@@ -16,8 +16,8 @@
           enctype="multipart/form-data" 
           action="{% url 'account_signup' %}"
         >
-          <header class="pb-4">
-            <h1 class="h3">Create Your  Account Today</h1>
+          <header class="pb-4 text-center">
+            <h1 class="h3 fw-bolder">Begin Your Journey Today</h1>
             <p class="text-muted">
               Start building your future
               and fullfill your dreams today
