--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -106,6 +106,32 @@
                 >FAQs</a
               >
             </li>
+          </ul>  
+
+          <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+            {% if request.is_authenticated and request.user.is_staff %}
+              
+            {% elif request.is_authenticated %}
+
+            {% else %}
+            <a 
+              class="btn btn-outline-light py-3 m-2" 
+              href="{% url 'account_login' %}" 
+              style="font-size: small; font-weight: 600; width: 8em;"
+              target="_blank"
+            >
+              Sign In
+            </a>
+
+            <a 
+              class="btn btn-light py-3 my-2"
+              href="" 
+              target="_blank"
+              style="font-size: small; font-weight: 600; width: 12em;"
+            >
+              Get Started For Free
+            </a>
+            {% endif %}
           </ul>
           
         </div>
@@ -174,6 +200,8 @@
                   <a href="{% url 'contact' %}">Contact Us</a>
                 </li>
               </ul>
+                
+
             </div>
 
             <div class="col-sm-6 col-md-4 footer-newsletter">
