URL Added to the signup

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -125,7 +125,7 @@
 
             <a 
               class="btn btn-light py-3 my-2"
-              href="" 
+              href="{% url 'account_signup' %}" 
               target="_blank"
               style="font-size: small; font-weight: 600; width: 12em;"
             >
