signup color changed on the sign in page

--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="text-white d-flex justify-content-center">
                       <span class="pe-2">{% trans "Don't have an Account" %}</span>
-                      <a class="text-warning secondaryAction d-flex" href="{% url 'account_signup' %}">
+                      <a class="text-primary fw-bolder secondaryAction d-flex" href="{% url 'account_signup' %}">
                         {% trans "Sign up" %}
                       </a>
                     </div>
