--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -81,7 +81,7 @@
             <li class="nav-item">
               <a
                 class="nav-link ms-4"
-                href="{% url 'offers' %}"
+                href="{% url 'plans' %}"
                 >Investment Plans</a
               >
             </li>
@@ -189,7 +189,7 @@
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
-                  <a href="{% url 'offers' %}">Investment Offers</a>
+                  <a href="{% url 'plans' %}">Investment Offers</a>
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
