adjust the plans each

--- a/pages/templates/pages/plans.html
+++ b/pages/templates/pages/plans.html
@@ -46,7 +46,7 @@
                             style="object-fit: cover;"
                         >
                     </div>
-                    <div class="col-lg-3 d-flex flex-column justify-content-center align-items-center">
+                    <div class="col-lg-3 d-flex flex-column justify-content-center">
                         <h3 class="h4 text-success fw-bolder">{{plan.name}}</h3>
                         <span class="text-secondary">Starts at </span>
                         <h4><sup>$</sup>{{plan.min_amount}}<span> / plan</span></h4>
