--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -388,6 +388,10 @@ background-color: var(--secondary-color);
   background: #fcfcfc;
 }
 
+/* .plan a{
+  display: flex;
+} */
+
 .plan .pricing-item{
   padding: 60px 40px;
   box-shadow: 0 3px 20px -2px rgba(108, 117, 125, 0.15);
