Made the image rounded

--- a/pages/templates/pages/plans.html
+++ b/pages/templates/pages/plans.html
@@ -42,7 +42,7 @@
                         <img 
                             src="{{plan.image.url}}" 
                             alt="" 
-                            class="img-fluid"
+                            class="img-fluid rounded-5"
                             style="object-fit: cover;"
                         >
                     </div>
