Added urls to each plan

--- a/pages/templates/pages/plans.html
+++ b/pages/templates/pages/plans.html
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col-lg-3 d-flex align-items-center justify-content-center">
                         <div class="text-center">
-                        <a href="" class="btn btn-1">Buy Now</a>
+                        <a href="{% url 'buy_investment' plan.name %}" class="btn btn-1">Buy Now</a>
                         </div>
                     </div>
                 </div>
